Bug 166382 - Printing in composer in HTML mode broken
Summary: Printing in composer in HTML mode broken
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: composer (other bugs)
Version First Reported In: 1.10.0
Platform: unspecified FreeBSD
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-07-12 17:33 UTC by mi+kde
Modified: 2011-09-08 15:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mi+kde 2008-07-12 17:33:54 UTC
Version:           1.9.9 (using 3.5.9, compiled sources)
Compiler:          Target: amd64-undermydesk-freebsd
OS:                FreeBSD (amd64) release 7.0-STABLE

I wanted to print a long e-mail I was still composing to show someone else, who was far away from a computer.

The e-mail was composed utilizing some of the limited HTML-capabilities currently provided by KMail -- some words were in Italic-slant.

The print-out -- from the Message-Print menu -- contained nothing but the "fancy" header.

Printing text-only compositions works, but for HTML the only work-around is to save the message as a draft, and then print it from the main GUI -- not from the mail-editor.
Comment 1 Thomas McGuire 2008-07-12 20:51:18 UTC
Confirmed with the KDE 4.1 version here.
Comment 2 FiNeX 2009-04-04 18:38:50 UTC
Confirmed in trunk too (r948595).
Comment 3 Laurent Montel 2011-09-08 10:40:26 UTC
Sorry I don't understand bug.
You can't print html email in messageviewer ?
Comment 4 mi+kde 2011-09-08 14:42:54 UTC
On 08.09.2011 06:40, Laurent Montel wrote:
> You can't print html email in messageviewer ?
No, not in viewer -- in composer. I was trying to print the 
partially-composed new message -- what I've typed so far.

Yours,

    -mi
Comment 5 Laurent Montel 2011-09-08 14:49:19 UTC
I confirm it . It doesn't print html style...
Wierd...
Will look at it
Comment 6 Laurent Montel 2011-09-08 15:25:55 UTC
Git commit de1c56d917e3708171e1545191f3797b59577141 by Montel Laurent.
Committed on 08/09/2011 at 17:25.
Pushed by mlaurent into branch 'master'.

Fix Bug 166382 - Printing in composer in HTML mode broken

FIXED-IN: 4.7.2
BUG: 166382

M  +3    -2    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/de1c56d917e3708171e1545191f3797b59577141
Comment 7 Laurent Montel 2011-09-08 15:27:20 UTC
Git commit 4cfd1eb619c1eb3d9629b8db4aa4368ec7d72877 by Montel Laurent.
Committed on 08/09/2011 at 17:25.
Pushed by mlaurent into branch '4.7'.

Fix Bug 166382 - Printing in composer in HTML mode broken

FIXED-IN: 4.7.2
BUG: 166382

M  +3    -2    kmail/kmcomposewin.cpp

http://commits.kde.org/kdepim/4cfd1eb619c1eb3d9629b8db4aa4368ec7d72877