Fix Bug 166382 - Printing in composer in HTML mode broken

FIXED-IN: 4.7.2
BUG: 166382