kmcomposewin.cpp
@@ -37,7 +37,6 @@
 #include "globalsettings.h"
 #include "kmmainwin.h"
 #include "kmmainwidget.h"
-#include "kmreadermainwin.h"
 #include "mailcomposeradaptor.h" // TODO port all D-Bus stuff...
 #include "messageviewer/stl_util.h"
 #include "messageviewer/util.h"
@@ -2408,7 +2407,9 @@ void KMComposeWin::slotPrintComposeResult( KJob *job )
     Q_ASSERT( composer->resultMessages().size() == 1 );
     Akonadi::Item printItem;
     printItem.setPayload<KMime::Message::Ptr>( composer->resultMessages().first() );
-    KMCommand *command = new KMPrintCommand( this, printItem );
+    //TODO how to get headerStyle ???
+    KMCommand *command = new KMPrintCommand( this, printItem,0,
+                                             0, ( mComposerBase->editor()->textMode() == KMeditor::Rich ) );
     command->start();
   } else {
     // TODO: error reporting to the user
